Fix layout bug (<fieldset> can not be flexbox)

--- a/css-shader.css
+++ b/css-shader.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background: #000;
     font-family: 'Roboto Condensed', sans-serif;
@@ -9,7 +13,7 @@ body {
     margin: 1em auto;
 }
 
-fieldset {
+.fieldset {
 	padding: 2em 0;
 	border: 1px solid white;
 	margin: 0;
